plugins {
    id 'java'
    id 'application'
    id 'org.javamodularity.moduleplugin' version '1.8.12'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.jlink' version '2.25.0'
}

group 'org.main'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.0'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'org.main.culturesolutioncalculation'
    mainClass = 'org.main.culturesolutioncalculation.Main'
}

javafx {
    version = '17.0.6'
    modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    implementation 'com.microsoft.sqlserver:mssql-jdbc:12.6.0.jre11'
    implementation 'mysql:mysql-connector-java:8.0.31'
    implementation 'com.opencsv:opencsv:5.7.1'

    // https://mvnrepository.com/artifact/com.itextpdf/itextpdf 5.5.6 사용했음
    implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13'

    // https://mvnrepository.com/artifact/com.itextpdf.tool/xmlworker
    implementation group: 'com.itextpdf.tool', name: 'xmlworker', version: '5.5.13'


    // https://mvnrepository.com/artifact/com.itextpdf/itext-xtra
    implementation group: 'com.itextpdf', name: 'itext-xtra', version: '5.5.13'

    // https://mvnrepository.com/artifact/com.itextpdf/itext-pdfa
    //implementation group: 'com.itextpdf', name: 'itext-pdfa', version: '5.5.6'
    implementation 'org.apache.commons:commons-imaging:1.0-alpha2'


}

test {
    useJUnitPlatform()
}

jlink {
    imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'app'
    }
}

jlinkZip {
    group = 'distribution'
}